--- a/TT-2016-B045/bibliografia.bib
+++ b/TT-2016-B045/bibliografia.bib
@@ -268,6 +268,22 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
   publisher={E. Arnold}
 }
 
+@article{dupless,
+  author    = {Mihir Bellare and
+               Sriram Keelveedhi and
+               Thomas Ristenpart},
+  title     = {DupLESS: Server-Aided Encryption for Deduplicated Storage},
+  journal   = {{IACR} Cryptology ePrint Archive},
+  volume    = {2013},
+  pages     = {429},
+  year      = {2013},
+  url       = {http://eprint.iacr.org/2013/429},
+  timestamp = {Wed, 10 Jul 2013 15:34:45 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/iacr/BellareKR13},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+
 @book{stanford,
  author = {Jurafsky, Daniel and Martin, James H.},
  title = {Speech and Language Processing: An Introduction to Natural Language Processing, Computational Linguistics, and Speech Recognition},
