--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -123,12 +123,12 @@
 \listoftables
 \mainmatter
 %------------------------------------------------------------------------------------------------------------------------------------
-\chapter{Introducción}
+%\chapter{Introducción}
 
 \cfinput{archivosTex/introduccion}
 
 %------------------------------------------------------------------------------------------------------------------------------------
-\chapter{Marco Teórico}
+%\chapter{Marco Teórico}
 
 \cfinput{archivosTex/preliminares}
 
